--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "Bebas Neue Cyrillic";
+    src: local("Bebas Neue Cyrillic"), local("BebasNeueCyrillic"),
+        url("../fonts/BebasNeueCyrillic.woff2") format("woff2"),
+        url("../fonts/BebasNeueCyrillic.woff") format("woff");
+    
+    font-display: swap;
+}
 *{
     box-sizing: border-box;
 }
@@ -46,4 +54,57 @@
     line-height: 20px; 
     text-decoration: none;
     color:#fff ;
+}
+.main{
+    max-width: 1280px; ;
+    margin: auto;
+    padding-top: 54px;
+    display: flex;
+}
+.main-info{
+    flex-grow: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-between;
+}
+.home-image path{
+    opacity: 0;
+    cursor: pointer;
+}
+.home-image path:hover{
+    opacity: 1;
+}
+.counter-group{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+.counter-button{
+    cursor: pointer;
+    background:#fff;
+    border: none;
+
+}
+.main-title{
+    margin: 0;
+    font-family:"Bebas Neue Cyrillic", sans-serif;
+    font-size: 37px;
+    line-height: 44px;
+    color: #635854;
+}
+.counter{
+    font-family:"Bebas Neue Cyrillic", sans-serif;
+    color: #635854;
+    font-size: 124px;
+    margin-top: 10px;
+}
+.button-primary{
+   background: #3596F5;
+   border-radius: 6px;
+   color: #fff;
+   border: none;
+   padding: 16px 36px;
+   cursor: pointer;
 }
